Update project config

--- a/.gitignore
+++ b/.gitignore
@@ -150,7 +150,8 @@ temp/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -204,4 +205,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/osx,node,linux,windows,sam
+# docker image build
+.build/
+*.docker.tar
+*.docker.tar.gz
